force-app/main/default/objects/blng__DebitNoteLine__c/blng__DebitNoteLine__c.object-meta.xml
<CustomObject>
    <label>Debit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>