force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__Allocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Allocations__c</fullName>
    <inlineHelpText>Amount of this line allocated to invoices. Does not include tax.</inlineHelpText>
    <label>Invoice Line Allocations</label>
    <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>