force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__AvailableBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__AvailableBalance__c</fullName>
    <formula>blng__TotalAmount__c -  blng__NetPaymentAllocations__c  -  blng__InvoiceLineNetAllocations__c -  blng__CreditNoteLineNetAllocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>