force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__BaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>blng__BaseCurrency__c</fullName>
    <label>Base Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>