force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__BillingGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Billing GL Rule assigned to this line</inlineHelpText>
    <label>Billing GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Debit Note Lines</relationshipLabel>
    <relationshipName>BillingGLRuleDebitNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>