force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__BillingGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Billing Treatment assigned to this line</inlineHelpText>
    <label>Billing GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Debit Note Lines</relationshipLabel>
    <relationshipName>BillingGLTreatmentDebitNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>