force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__BillToContact__c.field-meta.xml
<CustomField>
    <fullName>blng__BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Debit Note Lines</relationshipLabel>
    <relationshipName>Debit_Note_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>