force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__CreditNoteLineNetAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteLineNetAllocations__c</fullName>
    <formula>blng__CreditNoteLineAllocations__c -  blng__CreditNoteLineUnallocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Line Net Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>