force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__CreditNoteLineUnallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteLineUnallocations__c</fullName>
    <label>Credit Note Line Unallocations</label>
    <summarizedField>blng__DebitNoteAllocationCreditNoteLine__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__DebitNoteAllocationCreditNoteLine__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__DebitNoteAllocationCreditNoteLine__c.blng__DebitNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>