force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__DebitNoteLineDate__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNoteLineDate__c</fullName>
    <label>Debit Note Line Date</label>
    <type>Date</type>
</CustomField>