force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__EndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>