force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__InvoiceLineNetAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLineNetAllocations__c</fullName>
    <formula>blng__Allocations__c  -  blng__Unallocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Line Net Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>