force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Legal Entity for this line</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Debit Note Lines</relationshipLabel>
    <relationshipName>LegalEntityDebitNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>