force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__LegalEntityReference__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntityReference__c</fullName>
    <externalId>true</externalId>
    <label>LegalEntityReference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>