force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__NetPaymentAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__NetPaymentAllocations__c</fullName>
    <formula>blng__Payments__c -  blng__Refunds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payment Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>