force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__OverrideInitialRevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideInitialRevenueEndDate__c</fullName>
    <label>Override Initial Revenue End Date</label>
    <type>Date</type>
</CustomField>