force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__PaymentBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentBalance__c</fullName>
    <formula>blng__TotalAmount__c - blng__Payments__c + blng__Refunds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>