force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__Payments1__c.field-meta.xml
<CustomField>
    <fullName>blng__Payments1__c</fullName>
    <formula>blng__Payments__c - blng__Refunds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>