force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__RevenueAgreementMatchingID__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueAgreementMatchingID__c</fullName>
    <label>Revenue Agreement Matching ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>