force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__RevenueMostLikelyAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueMostLikelyAmount__c</fullName>
    <label>Revenue Most Likely Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>