force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__RevenueTransactionPrice__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueTransactionPrice__c</fullName>
    <label>Revenue Transaction Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>