force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__StartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>