force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <inlineHelpText>Status of the credit memo. Can be: Draft Posted Canceled</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PostingStatus</valueSetName>
    </valueSet>
</CustomField>