force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__TaxGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Tax GL Rule for this line</inlineHelpText>
    <label>Tax GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Debit Note Lines (Tax GL Rule)</relationshipLabel>
    <relationshipName>TaxGLRuleDebitNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>