force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__TaxGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Tax GL Rule for this line</inlineHelpText>
    <label>Tax GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Debit Note Lines (Tax GL Treatment)</relationshipLabel>
    <relationshipName>TaxGLTreatmentDebitNoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>