force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__TotalNetAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalNetAllocations__c</fullName>
    <formula>blng__CreditNoteLineNetAllocations__c +  blng__InvoiceLineNetAllocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Allocations (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>