force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__TotalPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalPaymentAmount__c</fullName>
    <label>Total Payment Amount</label>
    <summarizedField>blng__DebitNoteAllocation__c.blng__PaymentAmount__c</summarizedField>
    <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>