force-app/main/default/objects/blng__DebitNoteLine__c/fields/blng__TotalRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalRefundAmount__c</fullName>
    <label>Total Refund Amount</label>
    <summarizedField>blng__DebitNoteAllocation__c.blng__RefundAmount__c</summarizedField>
    <summaryForeignKey>blng__DebitNoteAllocation__c.blng__DebitNoteLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>